crates/ir/tests/ir/snapshots/main__ir__lower__inference__arithmetic_explicit_where.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__arithmetic_explicit_where

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn add(v0: Dict[core/semigroup.Semigroup, o11], v1: o11, v2: o11) -> o11 =
  let v3: o11 = trait_call core/semigroup.Semigroup.combine(v0, v1, v2)
  v3

fn main() -> Unit =
  let v5: Dict[core/semigroup.Semigroup, Int] = get_dict core/semigroup.Semigroup[Int]
  let v6: Int = call add(v5, 1, 2)
  let v7: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v8: String = trait_call core/show.Show.show(v7, v6)
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Unit = call println(v4, v8)
  v9
