crates/ir/tests/ir/snapshots/main__ir__lower__inference__boolean_ops.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__boolean_ops

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v69(v0: Bool) =
    let_join v68(v3: Bool) =
      let_join v67(v6: Bool) =
        let_join v66(v9: Bool) =
          let_join v65(v12: Bool) =
            let_join v64(v15: Bool) =
              let_join v63(v18: Bool) =
                let_join v62(v21: Bool) =
                  let v24: Bool = not(true)
                  let v25: Bool = not(false)
                  let_join v61(v26: Bool) =
                    let_join v60(v32: Bool) =
                      let v58: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
                      let v59: Unit = call println(v58, v32)
                      v59
                    in
                    let_join v57(v56: Bool) =
                      if v56 {
                        jump v60(v26)
                      } else {
                        jump v60(false)
                      }
                    in
                    let_join v55(v54: Bool) =
                      if v54 {
                        jump v57(v25)
                      } else {
                        jump v57(false)
                      }
                    in
                    let_join v53(v51: Bool) =
                      if v51 {
                        let v52: Bool = not(v24)
                        jump v55(v52)
                      } else {
                        jump v55(false)
                      }
                    in
                    let_join v50(v48: Bool) =
                      if v48 {
                        let v49: Bool = not(v21)
                        jump v53(v49)
                      } else {
                        jump v53(false)
                      }
                    in
                    let_join v47(v46: Bool) =
                      if v46 {
                        jump v50(v18)
                      } else {
                        jump v50(false)
                      }
                    in
                    let_join v45(v44: Bool) =
                      if v44 {
                        jump v47(v15)
                      } else {
                        jump v47(false)
                      }
                    in
                    let_join v43(v42: Bool) =
                      if v42 {
                        jump v45(v12)
                      } else {
                        jump v45(false)
                      }
                    in
                    let_join v41(v39: Bool) =
                      if v39 {
                        let v40: Bool = not(v9)
                        jump v43(v40)
                      } else {
                        jump v43(false)
                      }
                    in
                    let_join v38(v36: Bool) =
                      if v36 {
                        let v37: Bool = not(v6)
                        jump v41(v37)
                      } else {
                        jump v41(false)
                      }
                    in
                    let_join v35(v33: Bool) =
                      if v33 {
                        let v34: Bool = not(v3)
                        jump v38(v34)
                      } else {
                        jump v38(false)
                      }
                    in
                    jump v35(v0)
                  in
                  let_join v31(v29: Bool) =
                    if v29 {
                      jump v61(true)
                    } else {
                      let v30: Bool = not(false)
                      jump v61(v30)
                    }
                  in
                  let_join v28(v27: Bool) =
                    if v27 {
                      jump v31(false)
                    } else {
                      jump v31(false)
                    }
                  in
                  jump v28(true)
                in
                let_join v23(v22: Bool) =
                  if v22 {
                    jump v62(true)
                  } else {
                    jump v62(false)
                  }
                in
                jump v23(false)
              in
              let_join v20(v19: Bool) =
                if v19 {
                  jump v63(true)
                } else {
                  jump v63(true)
                }
              in
              jump v20(false)
            in
            let_join v17(v16: Bool) =
              if v16 {
                jump v64(true)
              } else {
                jump v64(false)
              }
            in
            jump v17(true)
          in
          let_join v14(v13: Bool) =
            if v13 {
              jump v65(true)
            } else {
              jump v65(true)
            }
          in
          jump v14(true)
        in
        let_join v11(v10: Bool) =
          if v10 {
            jump v66(false)
          } else {
            jump v66(false)
          }
        in
        jump v11(false)
      in
      let_join v8(v7: Bool) =
        if v7 {
          jump v67(true)
        } else {
          jump v67(false)
        }
      in
      jump v8(false)
    in
    let_join v5(v4: Bool) =
      if v4 {
        jump v68(false)
      } else {
        jump v68(false)
      }
    in
    jump v5(true)
  in
  let_join v2(v1: Bool) =
    if v1 {
      jump v69(true)
    } else {
      jump v69(false)
    }
  in
  jump v2(true)
