crates/ir/tests/ir/snapshots/main__ir__lower__inference__expected_type_match_arms.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__expected_type_match_arms

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn pick(v0: Bool) -> List[Int] =
  let v4: Bool = eq_int(v0, true)
  if v4 {
    let v3: List[Int] = construct List::Nil#1()
    v3
  } else {
    let v2: Bool = eq_int(v0, false)
    if v2 {
      let v1: List[Int] = construct List::Nil#1()
      v1
    } else {
      ()
    }
  }

fn main() -> Unit =
  let v5: Dict[core/show.Show, Unit] = get_dict core/show.Show[Unit]
  let v6: Unit = call println(v5, ())
  v6
