crates/ir/tests/ir/snapshots/main__ir__lower__inference__expected_type_question_mark.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__expected_type_question_mark

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn lookup(v0: Int) -> Option[Int] =
  let v1: Option[Int] = construct Option::Some#0(v0)
  v1

fn process(v2: Int) -> Option[Int] =
  let_join v3(v4: Option[Int]) =
    v4
  in
  let_join v11(v5: Int) =
    let v9: Int = mul_int(v5, 2)
    let v10: Option[Int] = construct Option::Some#0(v9)
    v10
  in
  let v6: Option[Int] = call lookup(v2)
  switch v6 {
    0 (v7: Int) ->
      jump v11(v7)
    1 ->
      let v8: Option[Int] = construct Option::None#1()
      jump v3(v8)
  }

fn main() -> Unit =
  let v12: Option[Int] = call process(21)
  switch v12 {
    0 (v13: Int) ->
      let v14: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v15: Unit = call println(v14, v13)
      v15
    1 ->
      let v16: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v17: Unit = call println(v16, 0)
      v17
  }
