crates/ir/tests/ir/snapshots/main__ir__lower__inference__expected_type_recur.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__expected_type_recur

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn drain(v0: List[Int]) -> Int =
  let_join [recur] v1(v2: List[Int]) =
    switch v2 {
      1 ->
        0
      0 (v3: j, v4: List[j]) ->
        let v5: List[Int] = construct List::Nil#1()
        let v6: List[Int] = v5
        jump v1(v6)
    }
  in
  jump v1(v0)

fn main() -> Unit =
  let v7: Dict[core/show.Show, Unit] = get_dict core/show.Show[Unit]
  let v8: Unit = call println(v7, ())
  v8
