crates/ir/tests/ir/snapshots/main__ir__lower__inference__explicit_type_args.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module inference__explicit_type_args

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/Cons as Cons(j, List[j]) -> List[j]
fn identity(v0: k11) -> k11 =
  v0

fn stringify(v1: Int) -> String =
  "n"

fn call_site() -> Int =
  let v2: Int = call identity(42)
  v2

fn standalone() -> Int =
  let v3: (Int) -> Int = make_closure(identity, [])
  let v4: Int = call_closure v3(42)
  v4

fn method_site(v5: List[Int]) -> List[String] =
  let v7: (Int) -> String = make_closure(stringify, [])
  let v8: (Int) -> String = v7
  let v6: Dict[core/functor.Functor, List] = get_dict core/functor.Functor[List]
  let v9: List[String] = trait_call core/functor.Functor.map(v6, v5, v8)
  v9
